<resources>
    <string name="app_name">RU Pizzeria</string>
    <string name="welcome_text">Welcome to RU Pizzeria</string>

    <!-- bottom navigation bar -->
    <string name="store_orders_label">Store Orders</string>
    <string name="chicago_label">Chicago</string>
    <string name="new_york_label">New York</string>
    <string name="current_order_label">Current Order</string>

    <!-- pizza fragment strings !-->
    <string name="chicago_pizza_title">Chicago Style Pizza</string>
    <string name="new_york_pizza_title">New York Style Pizza</string>
    <string name="toppings_label">Toppings</string>
    <string name="add_button">Add</string>
    <string name="remove_button">Remove</string>
    <string name="add_to_order">Add To Order</string>
    <string name="price_label">Price</string>
    <string name="crust_label">Crust</string>
    <string name="deep_dish_crust">Deep Dish Crust</string>
    <string name="pan_crust">Pan Crust</string>
    <string name="stuffed_crust">Stuffed Crust</string>
    <string name="brooklyn_crust">Brooklyn Crust</string>
    <string name="thin_crust">Thin Crust</string>
    <string name="hand_tossed_crust">Hand Tossed Crust</string>

    <!-- flavor, size, topping spinner/list strings !-->
    <string-array name="size_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="flavor_array">
        <item>Build Your Own</item>
        <item>Deluxe</item>
        <item>BBQ Chicken</item>
        <item>Meatzza</item>
    </string-array>
    <string-array name="toppings_array">
        <item>Anchovies</item>
        <item>BBQ Chicken</item>
        <item>Beef</item>
        <item>Cheddar</item>
        <item>Green Pepper</item>
        <item>Ham</item>
        <item>Mushroom</item>
        <item>Olives</item>
        <item>Pepperoni</item>
        <item>Pineapple</item>
        <item>Provolone</item>
        <item>Sausage</item>
    </string-array>
    <string-array name="deluxe_toppings">
        <item>Sausage</item>
        <item>Pepperoni</item>
        <item>Green Pepper</item>
        <item>Onion</item>
        <item>Mushroom</item>
    </string-array>
    <string-array name="BBQ_chicken_toppings">
        <item>BBQ Chicken</item>
        <item>Green Pepper</item>
        <item>Provolone</item>
        <item>Cheddar</item>
    </string-array>
    <string-array name="meatzza_toppings">
        <item>Sausage</item>
        <item>Pepperoni</item>
        <item>Beef</item>
        <item>Ham</item>
    </string-array>

    <!-- order -->
    <string name="empty_order_text">There are no pizzas in this order.</string>
    <string name="order_id_label">Order ID#</string>
    <string name="place_order_button">Place Order</string>
    <string name="clear_order_button">Clear Order</string>
    <string name="subtotal">Subtotal</string>
    <string name="taxes">Taxes</string>
    <string name="total">Total</string>
    <string name="order_success">Order Successfully Placed</string>
    <string name="order_clear">Order Cleared</string>

    <!-- pizza card template strings -->
    <string name="pizza_name_template">Pizza Name</string>
    <string name="pizza_size_template">Pizza Size</string>
    <string name="toppings_template">toppings, toppings, toppings</string>
    <string name="price_template">$XX.XX</string>

    <!-- store orders -->
    <string name="empty_store_orders_text">There are no orders.</string>

</resources>