<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChicagoFragment" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/chicago_pizza_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pizzaImage"
        android:layout_width="222dp"
        android:layout_height="152dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/chicago_byo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/size"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaImage"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/flavors"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaImage"
        tools:ignore="SpeakableTextPresentCheck" />

    <ListView
        android:id="@+id/availableToppings"
        android:layout_width="355dp"
        android:layout_height="190dp"
        android:layout_marginTop="8dp"
        android:entries="@android:array/emailAddressTypes"
        app:layout_constraintEnd_toEndOf="@+id/size"
        app:layout_constraintStart_toStartOf="@+id/flavors"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/orderButton"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/add_to_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/availableToppings"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="@+id/availableToppings"
        app:layout_constraintTop_toBottomOf="@+id/availableToppings"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/toppings_label"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/size"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/flavors"
        app:layout_constraintTop_toBottomOf="@+id/pizzaImage" />

    <EditText
        android:id="@+id/chicago_price"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:editable="false"
        android:ems="10"
        android:hint="@string/price_label"
        android:inputType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/availableToppings"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@+id/availableToppings"
        app:layout_constraintTop_toBottomOf="@+id/availableToppings"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/crustType"
        android:layout_width="198dp"
        android:layout_height="26dp"
        android:layout_marginTop="64dp"
        android:text="Crust"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaImage" />

</androidx.constraintlayout.widget.ConstraintLayout>