<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderFragment">

    <TextView
        android:id="@+id/tv_empty_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/orderRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/orderRecyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderRecyclerView"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginTop="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_id_label"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/orderRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/order_id"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:minHeight="30dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/orderRecyclerView"
        app:layout_constraintStart_toEndOf="@+id/tv_id"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="152dp"
        android:layout_height="112dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintStart_toStartOf="@+id/order_id"
        app:layout_constraintTop_toBottomOf="@+id/orderRecyclerView">

        <TextView
            android:id="@+id/tvSubtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right" />

        <TextView
            android:id="@+id/tvTax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#000000" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right" />

        <Button
            android:id="@+id/placeOrderButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/place_order_button"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/clearOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/clear_order_button"
        app:layout_constraintEnd_toEndOf="@+id/tv_id"
        app:layout_constraintTop_toBottomOf="@+id/orderRecyclerView"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>